--- a/.gn
+++ b/.gn
@@ -27,20 +27,35 @@ exec_script_whitelist =
     "//node/unofficial.gni",
     "//node/tools/inspector_protocol/BUILD.gn",
     "//node/deps/ada/BUILD.gn",
+    "//node/deps/ada/unofficial.gni",
     "//node/deps/llhttp/BUILD.gn",
+    "//node/deps/llhttp/unofficial.gni",
     "//node/deps/nghttp2/BUILD.gn",
+    "//node/deps/nghttp2/unfficial.gni",
     "//node/deps/simdutf/BUILD.gn",
+    "//node/deps/simdutf/unfficial.gni",
     "//node/deps/postject/BUILD.gn",
+    "//node/deps/postject/unfficial.gni",
     "//node/deps/brotli/BUILD.gn",
+    "//node/deps/brotli/unfficial.gni",
     "//node/deps/base64/BUILD.gn",
+    "//node/deps/base64/unfficial.gni",
     "//node/deps/ngtcp2/BUILD.gn",
+    "//node/deps/ngtcp2/unfficial.gni",
     "//node/deps/uv/BUILD.gn",
+    "//node/deps/uv/unfficial.gni",
     "//node/deps/uvwasi/BUILD.gn",
+    "//node/deps/uvwasi/unfficial.gni",
     "//node/deps/cares/BUILD.gn",
+    "//node/deps/cares/unfficial.gni",
     "//node/deps/googletest/BUILD.gn",
+    "//node/deps/googletest/unfficial.gni",
     "//node/deps/openssl/BUILD.gn",
+    "//node/deps/openssl/unfficial.gni",
     "//node/deps/histogram/BUILD.gn",
+    "//node/deps/histogram/unfficial.gni",
     "//node/src/inspector/BUILD.gn",
+    "//node/src/inspector/unfficial.gni",
   ]
 
 # The python interpreter to use by default.
